Fix layout problem

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -89,6 +89,7 @@
         margin: 0 8px;
         text-align: center;
         display: flex;
+        align-items: center;
       }
     }
 
